--- a/RFfusion.jl/Project.toml
+++ b/RFfusion.jl/Project.toml
@@ -4,10 +4,30 @@ version = "0.1.0"
 authors = ["Human Prime Generator"]
 
 [deps]
-
+CRC = "44b605c4-b955-5f2b-9b6d-d2bd01d3d205"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
+LieGroups = "6774de46-80ba-43f8-ba42-e41071ccfc5f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Manifolds = "1cead3c2-87b3-11e9-0ccd-23c62b72b94e"
+Octonions = "d00ba074-1e29-4f5e-9fd4-d67071d6a14d"
+Oscar = "f1435218-dba5-11e9-1e4d-f1a5fab5fc13"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProtoBuf = "3349acd9-ac6a-5e09-bcdb-63829b23a429"
+Quaternions = "94ee1d12-ae83-5a48-8b1c-48b8ff168ae0"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Rotations = "6038ab10-8711-5258-84ad-4b1120ba62dc"
+SerialPorts = "5d0f9de7-4c7f-54f5-bec2-484e8c04014e"
+Sockets = "6462fe0b-24de-5631-8697-dd941f90decc"
 
 [compat]
+Dates = "1.11.0"
 Libdl = "1.11.0"
+LieGroups = "0.0.2"
+Manifolds = "0.10.12"
+Printf = "1.11.0"
 ProtoBuf = "1.2.0"
+Random = "1.11.0"
+SerialPorts = "0.2.2"
+Sockets = "1.11.0"
